--- a/Jugadores.html
+++ b/Jugadores.html
@@ -47,7 +47,7 @@
         </div>
         <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
-            <img src="https://i.imgur.com/a00RvPf.jpg">
+            <img src="https://i.imgur.com/rdUJvN7.jpg">
         </div>
         <input class="carousel-open" type="radio" id="carousel-4" name="carousel" aria-hidden="true" hidden="">
         <div class="carousel-item">
